# OS

./: .gitignore  run.sh
HelloWorld/: .gitignore  CMakeLists.txt  build.cmd  build.sh
lab2/: run.cmd  run.sh
lab2/src/: main.cpp
lab2/src/lib/: background.cpp  background.hpp
lab2/src/test_progs/: error_prog.cpp  prog.cpp
lab3/: CMakeLists.txt  build.cmd  log.txt  run.cmd
lab3/src/: main.cpp  proc1.cpp  proc2.cpp
lab3/src/lib/: background.cpp  background.hpp  definitions.hpp  ipc.cpp  ipc.hpp  my_shmem.hpp  threads.cpp  threads.hpp  time.cpp  time.hpp  utils.cpp  utils.hpp
lab4/: CMakeLists.txt  build.cmd  day.txt  hour.txt  run.cmd  run.sh  run_sim.sh  sec.txt
lab4-5/: CMakeLists.txt  day.txt  db.db  db.db-journal  hour.txt  run.cmd  sec.txt
lab4-5/src/: main.cpp  sim.cpp
lab4-5/src/lib/: definitions.hpp  threads.cpp  threads.hpp  utils.cpp  utils.hpp
lab4-5/src/lib_server/: db.cpp  db.hpp  server.cpp  server.hpp  socketlib.cpp  socketlib.hpp  sql.hpp  utils.cpp  utils.hpp
lab4/src/: main.cpp  sim.cpp
lab4/src/lib/: definitions.hpp  threads.cpp  threads.hpp  utils.cpp  utils.hpp
lab5/: CMakeLists.txt
lab5web/: index.html  main.js  style.css
lab6/: CMakeLists.txt  build.cmd  run.cmd  run.sh
lab6-7/: CMakeLists.txt  build.sh  buildrun.sh
lab6-7/src/: definitions.hpp  main.cpp  utils.cpp
lab6-7/src/view/: window.cpp  window.hpp
lab6/src/: main.cpp
lab6/src/view/: window.cpp  window.hpp
